Update IT magic number
Signed-off-by: Andy Kwok <andy.kwok@improving.com>